complete.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javaapp
  labels:
    app: java-app-spring-boot-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: java-app-spring-boot-app
  template:
    metadata:
      labels:
        app: java-app-spring-boot-app
    spec:
       containers:
       - name: jforjava
         image: vishv3432/my_first_java_app:12
         ports:
         - containerPort: 8080


---

apiVersion: v1
kind: Service
metadata:
  name: java-app-svc
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector: 
    app: java-app-spring-boot-app



---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: java-app-svc
              port:
                number: 8080
